<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="placeholder"
            type="id.saipulmuiz.forwaapp.data.model.ViewPlaceholder" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhiteSoft">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/home_appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/home_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/home_desc_icon_forwaapp"
                    android:scaleType="centerInside"
                    android:src="@drawable/img_forwaapp"
                    app:tint="@color/white" />
            </androidx.appcompat.widget.Toolbar>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingHorizontal="16dp"
                android:paddingVertical="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_home_search"
                    android:paddingHorizontal="11dp">

                    <EditText
                        android:id="@+id/home_et_search"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:autofillHints="Saipul Muiz"
                        android:background="@null"
                        android:fontFamily="@font/segoeui"
                        android:hint="@string/home_search"
                        android:imeOptions="actionSearch"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/home_btn_search"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/home_btn_search"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@null"
                        android:contentDescription="@string/home_desc_button_search"
                        android:padding="11dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_all_search"
                        android:tint="@color/colorWhite"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </RelativeLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <include
                layout="@layout/include_placeholder_view"
                android:visibility="@{placeholder.show? View.VISIBLE : View.GONE}"
                bind:data="@{placeholder}"
                tools:visibility="visible" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_member"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <include layout="@layout/item_member_shimmer" />

                    <include layout="@layout/item_member_shimmer" />

                    <include layout="@layout/item_member_shimmer" />

                    <include layout="@layout/item_member_shimmer" />

                    <include layout="@layout/item_member_shimmer" />
                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipeRefresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/nested_scroll"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/member_rv_user"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:clipToPadding="false"
                            android:paddingHorizontal="20dp"
                            android:paddingTop="14dp"
                            android:paddingBottom="20dp"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:listitem="@layout/item_user" />

                        <ProgressBar
                            android:id="@+id/member_progressBar"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="?attr/actionBarSize"
                            android:visibility="gone" />
                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>