<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="user"
            type="id.saipulmuiz.forwaapp.data.model.UserDetail" />

        <variable
            name="placeholder"
            type="id.saipulmuiz.forwaapp.data.model.ViewPlaceholder" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhiteSoft">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <ImageView
                android:id="@+id/profile_btn_back"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:contentDescription="@string/profile_desc_button_back"
                android:scaleType="centerInside"
                android:src="@drawable/ic_all_arrow"
                app:tint="@color/colorWhite" />

            <TextView
                android:id="@+id/profile_toolbar_tittle"
                style="@style/main_tv_actionBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/profile_profile" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/profile_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_toolbar">

            <ProgressBar
                android:id="@+id/profile_progressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="150dp"
                android:visibility="gone" />

            <include
                layout="@layout/include_placeholder_view"
                android:visibility="@{placeholder.show? View.VISIBLE : View.GONE}"
                bind:data="@{placeholder}"
                tools:visibility="gone" />

            <ImageView
                android:id="@+id/profile_img_profile"
                imageUrl="@{user.photo}"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/profile_desc_image_profile" />

            <TextView
                android:id="@+id/profile_tv_name"
                style="@style/profile_tv_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@{user.nama}"
                android:visibility="@{user.nama != null ? View.VISIBLE : View.GONE}"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/profile_tv_username"
                style="@style/profile_tv_subTittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@{user.username}"
                android:visibility="@{user.username != null ? View.VISIBLE : View.GONE}"
                tools:visibility="visible" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="340dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/frame_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_container"
            app:layout_constraintVertical_bias="0.252" />

        <ImageView
            android:id="@+id/img_cake"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="76dp"
            android:src="@drawable/ic_baseline_cake_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_container" />

        <TextView
            android:id="@+id/title_birth"
            style="@style/profile_tv_subTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="72dp"
            android:text="Birthday"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/img_cake"
            app:layout_constraintTop_toBottomOf="@id/profile_container" />

        <TextView
            android:id="@+id/tv_birth"
            style="@style/profile_tv_subTittle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:text="@{user.tgl_lahir}"
            app:layout_constraintStart_toEndOf="@+id/img_cake"
            app:layout_constraintTop_toBottomOf="@+id/title_birth" />

        <ImageView
            android:id="@+id/img_gender"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/ic_baseline_wc_24"
            app:layout_constraintEnd_toEndOf="@+id/img_cake"
            app:layout_constraintStart_toStartOf="@+id/img_cake"
            app:layout_constraintTop_toBottomOf="@id/img_cake"
            tools:layout_editor_absoluteY="433dp" />

        <TextView
            android:id="@+id/title_gender"
            style="@style/profile_tv_subTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="Gender"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/img_gender"
            app:layout_constraintTop_toBottomOf="@id/tv_birth" />

        <TextView
            android:id="@+id/tv_gender"
            style="@style/profile_tv_subTittle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:text="Pria"
            app:layout_constraintStart_toEndOf="@+id/img_gender"
            app:layout_constraintTop_toBottomOf="@+id/title_gender" />

        <ImageView
            android:id="@+id/img_location"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/ic_baseline_location_on_24"
            app:layout_constraintEnd_toEndOf="@+id/img_cake"
            app:layout_constraintStart_toStartOf="@+id/img_cake"
            app:layout_constraintTop_toBottomOf="@id/img_gender" />

        <TextView
            android:id="@+id/title_location"
            style="@style/profile_tv_subTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="Address"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@+id/img_location"
            app:layout_constraintTop_toBottomOf="@id/tv_gender" />

        <TextView
            android:id="@+id/tv_location"
            style="@style/profile_tv_subTittle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:text="@{user.alamat}"
            app:layout_constraintStart_toEndOf="@+id/img_location"
            app:layout_constraintTop_toBottomOf="@+id/title_location" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>